allow-backend-apiserver.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-allow-apiserver
  namespace: frontend
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
         kubernetes.io/metadata.name: default
      podSelector:
        matchLabels:
         component: apiserver

    ports:
       - protocol: TCP
         port: 443
